fix: fix organization update
